# kleene

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_ems.sh
docs/: generate_examples.py  index.html  library.cpp  library.js  library.wasm  script.js  style.css
docs/ex/: bool.kl  examples.json  isprime.kl  meaning_of_life.kl  threenplusone.kl
include/: debug.h  parser.h  types.h
src/: main.cpp  parser.cpp
tests/: bool.kl  isprime.kl  meaning_of_life.kl  test.cpp  threenplusone.kl
